[package]
name = "ferrisprinter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrisprinter_server"
path = "src/bin/server/main.rs"

[lib]
name = "ferrisprinter"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
cookie = "0.18.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
httpmock = "0.7.0"
paho-mqtt = "0.12.5"
reqwest = { version = "0.12.7", features = ["cookies", "json"] }
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls", "time", "uuid"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tower-layer = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
